--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+ <!-- Required meta tags always come first -->
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+ <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+ <!-- Bootstrap CSS -->
+ <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Ristorante Con Fusion</title>
 </head>
 
@@ -11,7 +18,7 @@
         <div>
             <div>
                 <div>
-                    <h1>Ristorante con Fusion</h1>
+                    <h1>Ristorante con Fusion11</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div>
@@ -95,6 +102,10 @@
            </div>
         </div>
     </footer>
+      <!-- jQuery first, then Tether, then Bootstrap JS. -->
+      <script src="node_modules/jquery/dist/jquery.min.js"></script>
+      <script src="node_modules/tether/dist/js/tether.min.js"></script>
+      <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
 
