--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
  <!-- Bootstrap CSS -->
  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <title>Ristorante Con Fusion</title>
+    <title>Ristorante Con Fusion title</title>
 </head>
 
 <body>
