edited aboutus.html for row content

--- a/aboutus.html
+++ b/aboutus.html
@@ -31,14 +31,14 @@
     </header>
 
     <div class="container">
-        <div class="row">
+        <div class="row row-content-head align-items-center">
             <div class="col">
                <h3>About Us</h3>
                <hr>
             </div>
         </div>
         
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-6">
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
@@ -48,8 +48,7 @@
             </div>
         </div>
 
-
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col">
                 <h2>Corporate Leadership</h2>
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
@@ -67,7 +66,7 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="row">             
+            <div class="row ">             
                 <div class="col-5 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
