--- a/aboutus.html
+++ b/aboutus.html
@@ -17,6 +17,25 @@
 
 <body>
 
+        <nav class="navbar navbar-inverse navbar-toggleable-sm  fixed-top">
+                <div class="container">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
+                                <span class="navbar-toggler-icon"></span>
+                        </button>
+                     <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
+                  
+                   <div class="collapse navbar-collapse" id="Navbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item "><a class="nav-link" href="./index.html">Home</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                        </ul>            
+                </div>
+                </div>
+
+            </nav>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -33,7 +52,15 @@
     <div class="container">
         <div class="row row-content-head align-items-center">
             <div class="col">
-               <h3>About Us</h3>
+                    <ol class="col-12 breadcrumb">
+                    <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                    <li class="breadcrumb-item active">About Us</li>
+                </ol>
+                <div class="col-12">
+                    <h3>About Us</h3>
+                <hr>
+                </div>
+               
                <hr>
             </div>
         </div>
