--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
  <meta http-equiv="x-ua-compatible" content="ie=edge">
 
  <!-- Bootstrap CSS -->
- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
- <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
- <link rel="stylesheet" href="css/bootstrap-social.css">
- <link rel="stylesheet" href="css/styles.css"> 
+  <!-- build:css css/main.css -->
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/bootstrap-social.css">
+  <link href="css/styles.css" rel="stylesheet">
+  <!-- endbuild --> 
     <title>Ristorante Con Fusion title</title>
 </head>
 
@@ -329,28 +331,12 @@
         </div>
     </footer>
       <!-- jQuery first, then Tether, then Bootstrap JS. -->
-      <script src="node_modules/jquery/dist/jquery.min.js"></script>
-      <script src="node_modules/tether/dist/js/tether.min.js"></script>
-      <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-      <script>
-        $(document).ready(function(){
-            $("#mycarousel").carousel( { interval: 2000 } );
-            $("#carousel-button").click(function(){
-                if ($("#carousel-button").children("span").hasClass('fa-pause')) {
-                    $("#mycarousel").carousel('pause');
-                    $("#carousel-button").children("span").removeClass('fa-pause');
-                    $("#carousel-button").children("span").addClass('fa-play');
-                }
-                else if ($("#carousel-button").children("span").hasClass('fa-play')){
-                    $("#mycarousel").carousel('cycle');
-                    $("#carousel-button").children("span").removeClass('fa-play');
-                    $("#carousel-button").children("span").addClass('fa-pause');                    
-                }
-            });
-        });
-    </script>
-      
-
+       <!-- build:js js/main.js -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/tether/dist/js/tether.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <!-- endbuild --> 
 </body>
 
 </html>
