--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                         </ul>  
                         <span class="navbar-text">
-                                <a data-toggle="modal" data-target="#loginModal">
+                                <a id="logintable">
                                 <span class="fa fa-sign-in"></span> Login</a>
                         </span>          
                     </div>    
@@ -167,8 +167,7 @@
                 </div>
                 <div class="col-12  col-sm align-self-center">
                     <a type="button" class="btn btn-warning btn-sm btn-block"
-                    data-toggle="modal" data-target="#reserveModal"
-                        >Reserve Table</a>
+                    id ="reservetable">Reserve Table</a>
                 </div>
             </div>
         </div>
